# mopitube_psp

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  config.example.txt  deploy.sh
src/: artwork.c  artwork.h  config.c  config.h  http.c  http.h  input.c  input.h  main.c  mpd.c  mpd.h  net.c  net.h  ui.c  ui.h
